Remove fine tuning code, revert back to code

--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -84,63 +84,20 @@
     "x_train, x_test, y_train, y_test = train_test_split(x,y, test_size = .25, random_state = 42)\n",
     "\n",
     "import xgboost as xgb\n",
-    "from sklearn.model_selection  import GridSearchCV\n",
+    "\n",
+    "import xgboost as xgb\n",
     "\n",
     "model = xgb.XGBClassifier()\n",
-    "\n",
-    "# set up for grid search for hyperparameter tuning\n",
-    "optimization_dict = {'max_depth': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10],\n",
-    "                     'n_estimators': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 50],\n",
-    "                     'learning_rate': [0.2, 0.25, 0.3, 0.35, 0.5, 0.75, 0.99]\n",
-    "                     }\n",
-    "\n",
-    "xgb_model = GridSearchCV(model, optimization_dict, scoring='accuracy', verbose=1)\n",
-    "xgb_model.fit(x_train, y_train)\n",
+    "model.fit(x, y)\n",
     "\n",
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
     "scores = cross_val_score(model, x, y, cv=5)\n",
     "print(\"Accuracy: %0.2f (+/- %0.2f)\" % (scores.mean(), scores.std() * 2))\n",
     "\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "\n",
-    "y_pred = xgb_model.predict(x_test)\n",
-    "\n",
-    "acc = accuracy_score(y_test, y_pred)\n",
-    "print(\"Accuracy: %.2f%%\" % (acc * 100.0))\n",
-    "print(xgb_model.best_params_)\n",
-    "print(xgb_model.best_score_)"
+    "new_x = pd.DataFrame({'index': [0, 1, 2, 3]})\n",
+    "predictions = model.predict(new_x)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "from catboost import CatBoostClassifier\n",
-    "\n",
-    "cat_model = CatBoostClassifier()\n",
-    "optimization_dict = {'max_depth': [2],\n",
-    "                     'n_estimators': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 50],\n",
-    "                     'learning_rate': [0.2, 0.25, 0.3, 0.35]\n",
-    "                     }\n",
-    "\n",
-    "# set up for grid search for hyperparameter tuning\n",
-    "cat_model = GridSearchCV(cat_model, optimization_dict, scoring='accuracy', verbose=1)\n",
-    "cat_model.fit(x_train, y_train)\n",
-    "\n",
-    "y_pred = cat_model.predict(x_test)\n",
-    "\n",
-    "acc = accuracy_score(y_test, y_pred)\n",
-    "print(\"Accuracy: %.2f%%\" % (acc * 100.0))\n",
-    "print(cat_model.best_params_)\n",
-    "print(cat_model.best_score_)\n",
-    "\n",
-    "cat_predictions = cat_model.predict(new_x)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
   },
   {
    "cell_type": "code",
